prepare for deployment: 1. remove "flash tinker" prompt (need to add flashing) 2. temp fix soft AP second screen1-2-3 3. add seen firstTimeView persistence

--- a/Photon-Tinker/Base.lproj/Main.storyboard
+++ b/Photon-Tinker/Base.lproj/Main.storyboard
@@ -433,7 +433,7 @@
                                             </mask>
                                         </variation>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="15" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ecC-aQ-rz0">
+                                    <textField hidden="YES" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="15" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ecC-aQ-rz0">
                                         <rect key="frame" x="20" y="0.0" width="528" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="240" id="MIf-2o-dyF"/>
@@ -493,10 +493,10 @@
                                 </variation>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3P4-zn-2e7" userLabel="firstTimeView">
-                                <rect key="frame" x="150" y="100" width="300" height="400"/>
+                                <rect key="frame" x="16" y="72" width="568" height="512"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="center" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fnz-AA-GQf">
-                                        <rect key="frame" x="4" y="4" width="292" height="364"/>
+                                        <rect key="frame" x="4" y="4" width="560" height="476"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <mutableString key="text">Welcome To Tinker!
 
@@ -504,20 +504,20 @@ Tinker is the fastest and easiest way to prototype and play with your Photon.
 
 You can access the basic input/output functions of the Photon without writing a line of code.
 
-Tap any pin to get started, select a pin function and tinker with the value. Hold a pin to reset its function. 
-Enjoy!</mutableString>
+Tap any pin to get started, select a pin function and tinker with the value. Hold a pin to reset its function. Start with pin D7 - select digitalWrite - blink the attached LED.  For more information visit:  docs.particle.io/photon/tinker/
+ Enjoy!</mutableString>
                                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <fontDescription key="fontDescription" name="Gotham-Book" family="Gotham" pointSize="15"/>
                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                     </textView>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-The Particle Team" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5z-Hi-GOP">
-                                        <rect key="frame" x="59" y="376" width="142" height="16"/>
+                                        <rect key="frame" x="193" y="488" width="142" height="16"/>
                                         <fontDescription key="fontDescription" name="Gotham-ExtraLight" family="Gotham" pointSize="16"/>
                                         <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="imgPointAtD7" translatesAutoresizingMaskIntoConstraints="NO" id="SrP-yY-bWI">
-                                        <rect key="frame" x="-150" y="-100" width="37" height="289"/>
+                                        <rect key="frame" x="-16" y="-72" width="37" height="289"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.55000000000000004" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -531,6 +531,12 @@ Enjoy!</mutableString>
                                     <constraint firstAttribute="height" constant="400" id="yr0-TL-TTD"/>
                                     <constraint firstAttribute="bottom" secondItem="t5z-Hi-GOP" secondAttribute="bottom" constant="8" id="zZH-Fm-Fpe"/>
                                 </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="645-0e-TnH"/>
+                                        <exclude reference="yr0-TL-TTD"/>
+                                    </mask>
+                                </variation>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8kx-sx-cDn" userLabel="backButton">
                                 <rect key="frame" x="8" y="28" width="24" height="24"/>
@@ -700,60 +706,26 @@ Enjoy!</mutableString>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="FUn-vZ-ZaU" firstAttribute="top" secondItem="hGx-VV-XEo" secondAttribute="bottom" constant="8" id="0Sm-wE-dSo"/>
                             <constraint firstItem="13L-Wr-K1a" firstAttribute="top" secondItem="9tl-K2-82X" secondAttribute="bottom" constant="16" id="0Tp-mu-72O"/>
                             <constraint firstItem="9tl-K2-82X" firstAttribute="leading" secondItem="ucx-4a-6jp" secondAttribute="leadingMargin" id="1HZ-NU-F5t"/>
-                            <constraint firstItem="13L-Wr-K1a" firstAttribute="top" secondItem="3P4-zn-2e7" secondAttribute="bottom" constant="32" id="3mS-Dc-9JH"/>
-                            <constraint firstAttribute="centerY" secondItem="3P4-zn-2e7" secondAttribute="centerY" id="3xg-NL-zQV"/>
-                            <constraint firstItem="FUn-vZ-ZaU" firstAttribute="top" secondItem="hGx-VV-XEo" secondAttribute="bottom" constant="8" id="6zf-UN-Mzg"/>
+                            <constraint firstItem="3P4-zn-2e7" firstAttribute="bottom" secondItem="9tl-K2-82X" secondAttribute="bottom" id="2YD-dq-TOt"/>
                             <constraint firstItem="8kx-sx-cDn" firstAttribute="leading" secondItem="ucx-4a-6jp" secondAttribute="leadingMargin" constant="-8" id="DFO-E4-7D0"/>
-                            <constraint firstAttribute="trailing" secondItem="3P4-zn-2e7" secondAttribute="trailing" constant="32" id="EXW-IT-Pbb"/>
                             <constraint firstAttribute="centerY" secondItem="6Dm-8R-bO7" secondAttribute="centerY" id="Eb9-iF-435"/>
-                            <constraint firstItem="3P4-zn-2e7" firstAttribute="leading" secondItem="ucx-4a-6jp" secondAttribute="leading" constant="32" id="GDi-qZ-Bm4"/>
                             <constraint firstItem="Gt1-dF-1aV" firstAttribute="leading" secondItem="ucx-4a-6jp" secondAttribute="leading" id="Hs2-6M-ygN"/>
-                            <constraint firstItem="3P4-zn-2e7" firstAttribute="top" secondItem="9rh-mq-4bk" secondAttribute="bottom" constant="1" id="IKk-xL-1Et"/>
-                            <constraint firstAttribute="centerX" secondItem="3P4-zn-2e7" secondAttribute="centerX" id="K7a-yn-I4a"/>
-                            <constraint firstItem="hGx-VV-XEo" firstAttribute="leading" secondItem="3P4-zn-2e7" secondAttribute="trailing" constant="8" id="LF5-Ll-QaR"/>
-                            <constraint firstItem="9rh-mq-4bk" firstAttribute="top" secondItem="Gt1-dF-1aV" secondAttribute="bottom" constant="12" id="LdC-IY-AMF"/>
                             <constraint firstAttribute="centerX" secondItem="6Dm-8R-bO7" secondAttribute="centerX" id="Lk8-O5-HVm"/>
+                            <constraint firstItem="3P4-zn-2e7" firstAttribute="leading" secondItem="9tl-K2-82X" secondAttribute="leading" id="MKg-n0-5pe"/>
                             <constraint firstItem="Gt1-dF-1aV" firstAttribute="top" secondItem="ucx-4a-6jp" secondAttribute="top" id="RXc-ya-nqj"/>
                             <constraint firstAttribute="trailingMargin" secondItem="hGx-VV-XEo" secondAttribute="trailing" constant="-8" id="S4T-EO-UAz"/>
-                            <constraint firstItem="3P4-zn-2e7" firstAttribute="top" secondItem="FUn-vZ-ZaU" secondAttribute="bottom" constant="32" id="XFu-mH-ECn"/>
-                            <constraint firstItem="FUn-vZ-ZaU" firstAttribute="top" secondItem="hGx-VV-XEo" secondAttribute="bottom" constant="8" id="cMJ-Zh-FDF"/>
-                            <constraint firstAttribute="centerY" secondItem="3P4-zn-2e7" secondAttribute="centerY" id="cbs-e9-Rue"/>
                             <constraint firstAttribute="trailing" secondItem="Gt1-dF-1aV" secondAttribute="trailing" id="fE6-Fm-5En"/>
-                            <constraint firstItem="3P4-zn-2e7" firstAttribute="top" secondItem="Gt1-dF-1aV" secondAttribute="bottom" constant="8" id="gM8-qK-qAS"/>
-                            <constraint firstItem="3P4-zn-2e7" firstAttribute="top" secondItem="hGx-VV-XEo" secondAttribute="bottom" constant="8" id="glH-MM-uIR"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="9tl-K2-82X" secondAttribute="trailing" constant="134" id="nK0-18-fGQ"/>
                             <constraint firstItem="hGx-VV-XEo" firstAttribute="top" secondItem="FUn-vZ-ZaU" secondAttribute="bottom" constant="8" id="nb3-tM-gSJ"/>
-                            <constraint firstAttribute="centerX" secondItem="3P4-zn-2e7" secondAttribute="centerX" id="pCM-O8-MQn"/>
+                            <constraint firstItem="3P4-zn-2e7" firstAttribute="top" secondItem="9tl-K2-82X" secondAttribute="top" id="qbF-mO-coi"/>
+                            <constraint firstItem="3P4-zn-2e7" firstAttribute="trailing" secondItem="9tl-K2-82X" secondAttribute="trailing" id="qq5-BO-DZS"/>
                             <constraint firstAttribute="centerX" secondItem="cp9-M3-Ao7" secondAttribute="centerX" id="sFH-6w-dlZ"/>
                             <constraint firstItem="8kx-sx-cDn" firstAttribute="top" secondItem="FUn-vZ-ZaU" secondAttribute="bottom" constant="8" id="unW-3s-y1k"/>
-                            <constraint firstItem="3P4-zn-2e7" firstAttribute="top" secondItem="ucx-4a-6jp" secondAttribute="top" constant="100" id="vFP-eN-FEi"/>
                             <constraint firstAttribute="centerY" secondItem="cp9-M3-Ao7" secondAttribute="centerY" id="yG3-d7-fag"/>
                             <constraint firstItem="9tl-K2-82X" firstAttribute="top" secondItem="Gt1-dF-1aV" secondAttribute="bottom" constant="8" id="yoO-uS-xIH"/>
                             <constraint firstAttribute="trailingMargin" secondItem="9tl-K2-82X" secondAttribute="trailing" id="yxh-Vd-71b"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="0Sm-wE-dSo"/>
-                                <exclude reference="6zf-UN-Mzg"/>
-                                <exclude reference="cMJ-Zh-FDF"/>
-                                <exclude reference="3xg-NL-zQV"/>
-                                <exclude reference="EXW-IT-Pbb"/>
-                                <exclude reference="GDi-qZ-Bm4"/>
-                                <exclude reference="IKk-xL-1Et"/>
-                                <exclude reference="XFu-mH-ECn"/>
-                                <exclude reference="gM8-qK-qAS"/>
-                                <exclude reference="glH-MM-uIR"/>
-                                <exclude reference="pCM-O8-MQn"/>
-                                <exclude reference="vFP-eN-FEi"/>
-                                <exclude reference="nK0-18-fGQ"/>
-                                <exclude reference="LdC-IY-AMF"/>
-                                <exclude reference="LF5-Ll-QaR"/>
-                                <exclude reference="3mS-Dc-9JH"/>
-                            </mask>
-                        </variation>
                     </view>
                     <connections>
                         <outlet property="chipView" destination="HPv-oK-mru" id="jix-yd-G6j"/>
